--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+# JPA Configurations
+# suppress inspection "UnusedProperty"
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# suppress inspection "UnusedProperty"
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
+# suppress inspection "UnusedProperty"
+spring.datasource.username=postgres
+# suppress inspection "UnusedProperty"
+spring.datasource.password=postgres
+# suppress inspection "UnusedProperty"
+spring.datasource.driverClassName=org.postgresql.Driver
+# suppress inspection "UnusedProperty"
+spring.jpa.show-sql=true
